{
    "name": "GameInputs",
    "maps": [
        {
            "name": "InteractionMode",
            "id": "34f3e68e-4ee2-4b32-8394-650dc594ccab",
            "actions": [
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "f2d6ef5b-dafa-4100-9757-c5798433fc0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenFacilityBuildingMode",
                    "type": "Button",
                    "id": "c0f5105e-98a5-489e-be01-bb4a85945acc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c2735d5c-82c0-4dc3-a639-6d2ede72cfcf",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbbf0f01-36c5-4678-a70f-ba1deac3c660",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fecaf1b1-30ca-41c9-b93f-a31209e236d7",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenFacilityBuildingMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MapFilter",
            "id": "f4795cab-eb07-42c1-b02d-1c77a3b30325",
            "actions": [
                {
                    "name": "TerrainVue",
                    "type": "Button",
                    "id": "78b617c8-689e-4ff8-b4e3-c27825ace508",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MarketVue",
                    "type": "Button",
                    "id": "2ffa9330-a937-44e3-aea5-c5815db1a535",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5cf20930-1f28-4f4f-8294-2828861250cd",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TerrainVue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "606fdd1d-8fcb-4a1f-ae1f-47d9c1286743",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MarketVue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControles",
            "id": "f05ef245-4561-4cfd-8ac2-834680e513f8",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fbed287d-5580-4faf-892e-487301f7124b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zooming",
                    "type": "Value",
                    "id": "4f0cd8a5-fa2d-45c1-b95a-1e0f3e7a3c2d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpeepUp",
                    "type": "Button",
                    "id": "649efa9d-9e47-4774-a17c-07e05ba61096",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Axis",
                    "id": "61a6e0e5-f4a2-4371-819f-d9669a91c86a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6f11af52-03c3-4cf7-9cfe-21260dd846d9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b06854fd-a8e6-463d-a434-57221218444e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6571ab1c-3027-490a-8769-e301ae72fdba",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ad0fef1e-1b75-4680-8ed5-abe13fdba131",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "f888b744-2740-4986-aa0e-0ce2c8423b5d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zooming",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "627a5c79-3322-44ae-87be-9d0e35b9a8b6",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zooming",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "948834e8-274e-43da-8038-794902265e13",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zooming",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "86ffa792-a813-41d8-a627-d8e56fb2c25c",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeepUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TimeControles",
            "id": "2fd53f24-eb20-4682-9cc1-9590150fd09a",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "9acaf949-492d-4a0e-9e31-a213fe26f1fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Time1",
                    "type": "Button",
                    "id": "7adc3ea8-e1df-43c9-a09e-a02ea1593ec8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Time2",
                    "type": "Button",
                    "id": "ae0565a9-97d1-42ef-b8ee-277d5ec33880",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Time3",
                    "type": "Button",
                    "id": "4797c12c-cc6d-4f50-bb8c-2d6bbcdd87d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseTime",
                    "type": "Button",
                    "id": "eb59068a-1637-4da2-8cda-bb39a22057b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84d99e63-8cd8-4a54-9084-e5a091aeebe8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b09ffa00-e24a-494a-8ff1-dd7f256e67eb",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Time1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "491b76ca-4858-4a4f-a716-1fee4db5d572",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Time2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c6b8203-fb4d-4a7e-b3b7-3160b3cdce4f",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Time3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "NumPad",
                    "id": "0e6ff551-4ffd-4e6c-8f38-63e263cd59c3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "39a77362-f343-4f70-90f9-a1f336650e73",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "2f2182ae-cc35-4ceb-99e6-3866bab3b30e",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "ef4d3f8c-b647-4a51-a200-ddc099b1d1a4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "28f930c5-7a50-4b0f-9cb1-30d4ddc07663",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "657bf13b-ce32-49a0-a556-0a35134c53f0",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTime",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}